# ranhigz-c-pz-14

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/entities/Address/: Address.cpp  Address.h
src/entities/Person/: Person.cpp  Person.h
src/entities/Person/AdditionalInfo/: AdditionalInfo.cpp  AdditionalInfo.h
src/entities/Person/Fio/: Fio.cpp  Fio.h
src/entities/Student/: Student.cpp  Student.h
src/entities/Student/Scores/: Scores.cpp  Scores.h
src/enum/: Subjects.cpp  Subjects.h
src/helpers/: helper.cpp  helper.h
src/services/FakeData/: FakeData.cpp  FakeData.h
src/services/Student/: Student.cpp  Student.h
src/services/Student/Score/: Score.cpp  Score.h
